--- a/index.html
+++ b/index.html
@@ -1052,6 +1052,12 @@
 								src="./ico/xixi.svg" alt="icon">三分机场</a></div>
 					<div class="link-item"><a href="https://daishu02.com/" target="_blank"><img width="20px"
 								src="./ico/xixi.svg" alt="icon">袋鼠加速</a></div>
+					<div class="link-item"><a href="https://clashxhub.com/clash-backup-download/" target="_blank"><img width="20px"
+								src="./ico/xixi.svg" alt="icon">Clash</a></div>
+					<div class="link-item"><a href="https://getsurfboard.com/docs/installation" target="_blank"><img width="20px"
+								src="./ico/xixi.svg" alt="icon">Surfboard</a></div>
+					<div class="link-item"><a href="https://www.shadowrocket.vip/" target="_blank"><img width="20px"
+								src="./ico/xixi.svg" alt="icon">Shadowrocket</a></div>
 				</div>
 			</div>
 
