--- a/index.html
+++ b/index.html
@@ -590,8 +590,8 @@
 	<body>
 		<div class="sidebar"> <!-- 侧边栏 -->
 			<div class="datetime" id="datetime"> <!-- 显示日期和时间 -->
-				<p id="date"></p> <!-- 日期 -->
-				<p id="time"></p> <!-- 时间 -->
+				<p id="date">0000年0月00日</p> <!-- 日期 -->
+				<p id="time">00:00:00</p> <!-- 时间 -->
 			</div>
 			<div>
 				<div class="logo-container"> <!-- logo容器 -->
