--- a/000/00.html
+++ b/000/00.html
@@ -293,97 +293,110 @@
 						<td class="right-align"><a target="_blank" href="./phone.html">跳转</a></td>
 					</tr>
 
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
+						<td>江氏小六壬</td>
+						<td class="right-align"><a target="_blank" href="http://www.jiangyangjun.com/paipan/#/pages/index/index">跳转</a></td>
+					</tr>
+
+					<tr onclick="copyLinkOnTouch()">
 						<td>豆包</td>
 						<td class="right-align"><a target="_blank" href="https://www.doubao.com/chat/?ghh=1">跳转</a></td>
 					</tr>
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
 						<td>可灵AI</td>
 						<td class="right-align"><a target="_blank" href="https://klingai.kuaishou.com/">跳转</a></td>
 					</tr>
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
 						<td>一起看TV版</td>
 						<td class="right-align"><a target="_blank" href="https://m.yqk1du7.com/tv/index.html">跳转</a>
 						</td>
 					</tr>
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
 						<td>阿水AI6.0</td>
 						<td class="right-align"><a target="_blank" href="https://ai.ashuiai.com/home/">跳转</a></td>
 					</tr>
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
+						<td>情趣.app</td>
+						<td class="right-align"><a target="_blank" href="https://dph9boquygkqy.cloudfront.net/?parent_icode=1205073192">跳转</a></td>
+					</tr>
+					<tr onclick="copyLinkOnTouch()">
+						<td>NG28.app</td>
+						<td class="right-align"><a target="_blank" href="https://103.54.60.22:8866/#/link?invite=3228500">跳转</a></td>
+					</tr>
+					<tr onclick="copyLinkOnTouch()">
 						<td>跑分</td>
 						<td class="right-align"><a target="_blank" href="http://cgd9.cc/index.html">跳转</a></td>
 					</tr>
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
 						<td>Pixso AI</td>
 						<td class="right-align"><a target="_blank"
 								href="https://pixso.cn/designskills/ai-drawing-generator-summary/">跳转</a></td>
 					</tr>
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
 						<td>A链导航-最好的成人网址导航网站</td>
 						<td class="right-align"><a target="_blank" href="https://www.alinkdh.com/">跳转</a></td>
 					</tr>
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
 						<td>Stripchat</td>
 						<td class="right-align"><a target="_blank" href="https://zh.stripchat.com/">跳转</a></td>
 					</tr>
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
 						<td>百春链成人APP下载</td>
 						<td class="right-align"><a target="_blank" href="https://app.baichunlinks.com/">跳转</a></td>
 					</tr>
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
 						<td>Pornhub</td>
 						<td class="right-align"><a target="_blank" href="https://cn.pornhub.com/">跳转</a></td>
 					</tr>
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
 						<td>会赚乐</td>
 						<td class="right-align"><a target="_blank" href="http://pc.huizhuanle.com/">跳转</a></td>
 					</tr>
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
 						<td>MissAV</td>
 						<td class="right-align"><a target="_blank" href="https://missav.com/dm44/cn/ssni-578">跳转</a>
 						</td>
 					</tr>
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
 						<td>Jable-tv</td>
 						<td class="right-align"><a target="_blank" href="https://jable.tv/">跳转</a></td>
 					</tr>
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
 						<td>春水App</td>
 						<td class="right-align"><a target="_blank" href="https://chunsxc.com/">跳转</a></td>
 					</tr>
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
 						<td>ADxAD广告</td>
 						<td class="right-align"><a target="_blank" href="https://pub.adxad.com/">跳转</a></td>
 					</tr>
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
 						<td>动漫AV</td>
 						<td class="right-align"><a target="_blank" href="https://hanime1.me/watch?v=25989">跳转</a></td>
 					</tr>
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
 						<td>动漫AV2</td>
 						<td class="right-align"><a target="_blank" href="https://hanime1.me/watch?v=23286">跳转</a></td>
 					</tr>
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
 						<td>日本AV-付费</td>
 						<td class="right-align"><a target="_blank" href="https://special.dmm.co.jp/">跳转</a></td>
 					</tr>
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
 						<td>亚洲色吧</td>
 						<td class="right-align"><a target="_blank" href="https://yazhouseba.co/article.php">跳转</a></td>
 					</tr>
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
 						<td>Xvideos 2</td>
 						<td class="right-align"><a target="_blank"
 								href="https://www.xvideos.com/video.kpmcfbm49ab/japanese_masseuse_satomi_suzuki_likes_69_uncensored">跳转</a>
 						</td>
 					</tr>
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
 						<td>俄罗斯_rutracker.org</td>
 						<td class="right-align"><a target="_blank" href="https://rutracker.org/forum/index.php">跳转</a>
 						</td>
 					</tr>
-					<tr>
+					<tr onclick="copyLinkOnTouch()">
 						<td>隐藏页面20</td>
 						<td class="right-align"><a target="_blank" href="xx.html">跳转</a></td>
 					</tr>
@@ -393,6 +406,25 @@
 		</div>
 
 		<script>
+			
+			// 链接复制函数
+			function copyLinkOnTouch() {
+				const targetTr = event.target.closest('tr');
+				const anchorTag = targetTr.querySelector('a');
+				if (anchorTag) {
+					const link = anchorTag.href;
+					navigator.clipboard.writeText(link)
+						.then(() => {
+							console.log('链接已复制到剪切板：', link);
+						})
+						.catch((error) => {
+							console.error('复制链接失败：', error);
+						});
+				}
+			}
+			
+			
+			
 			// 获取搜索框、搜索按钮、清除按钮和搜索结果列表
 			const searchInput = document.getElementById('search');
 			const searchButton = document.getElementById('search-btn');
