--- a/dg/1index.html
+++ b/dg/1index.html
@@ -12,7 +12,7 @@
 			<param name="_ExtentY" value="10866">
 			<param name="_StockProps" value="0">
 			<param name="SRC" value="testing_pdf.pdf">
-			<embed src="杨开群_简历.pdf" width="100%" height="800" href="testing_pdf.pdf"></embed><!--FF-->
+			<embed src="杨开群_电工_简历.pdf" width="100%" height="800" href="testing_pdf.pdf"></embed><!--FF-->
 		</object>
 	</body>
 </html>
