--- a/logo/index.html
+++ b/logo/index.html
@@ -52,32 +52,48 @@
 			<img src="./img/05.jpg" title="1920*1080 紫色  薰衣草....？" style="width: 50%;" class="img-responsive juli" />
 			<img src="./img/06.jpg" title="1920*1080 星球...." style="width: 50%;" class="img-responsive juli" />
 			<img src="./img/07.jpg" title="1920*1080 放松...." style="width: 50%;" class="img-responsive juli" />
-			
+
 			<img src="./png/0.png" title="824*825 鹿丸 1...." style="width: 50%;" class="img-responsive juli" />
 			<img src="./png/1.png" title="825*825 鹿丸 2...." style="width: 50%;" class="img-responsive juli" />
-			<img src="./png/0favicon.ico" title="446*446 带土写轮眼0favicon.ico...." style="width: 50%;" class="img-responsive juli" />
+			<img src="./png/0favicon.ico" title="446*446 带土写轮眼0favicon.ico...." style="width: 50%;"
+				class="img-responsive juli" />
 			<img src="./png/zhi.jpg" title="1437*1248 蓝色写轮眼...." style="width: 50%;" class="img-responsive juli" />
-			
-			<img src="./png/500x500-白色底.png" title="灰度 500x500-白色底.png...." style="width: 50%;" class="img-responsive juli" />
-			<img src="./png/500x500-透明底.png" title="灰度 500x500-透明底.png...." style="width: 50%;" class="img-responsive juli" />
-			<img src="./png/500x500-黑色底.png" title="灰度 500x500-黑色底.png...." style="width: 50%;" class="img-responsive juli" />
-			<img src="./png/logo3.png" title="370*320 YES SIR!-透明背景.png...." style="width: 50%;" class="img-responsive juli" />
-			<img src="./png/1000x1000-白色底.png" title="灰度 1000x1000-白色底.png...." style="width: 50%;" class="img-responsive juli" />
-			<img src="./png/1000x1000-黑色底.png" title="灰度 1000x1000-黑色底.png...." style="width: 50%;" class="img-responsive juli" />
-			<img src="./png/home.png" title="512*512 home.png...." style="width: 50%;" class="img-responsive juli" />
-			<img src="./png/1500x1500.png" title="灰度 1500x1500-透明背景.png...." style="width: 50%;" class="img-responsive juli" />
-			<img src="./png/2000x2000.png" title="灰度 2000x2000-透明背景.png...." style="width: 50%;" class="img-responsive juli" />
-			<img src="./png/2000x2000-白色底.png" title="灰度 2000x2000-白色底.png...." style="width: 50%;" class="img-responsive juli" />
-			<img src="./png/2000x2000-黑色底.png" title="灰度 2000x2000-黑色底.png...." style="width: 50%;" class="img-responsive juli" />
-			<img src="./png/welcome.png" title="500*490-welcome_拽-头像.png...." style="width: 50%;" class="img-responsive juli" />
-			<img src="./png/blog.png" title="灰度 446*446-blog-透明背景.png...." style="width: 50%;" class="img-responsive juli" />
 
-			<img src="./png/favicon.ico" title="灰度 446*446 favicon.ico...." style="width: 50%;" class="img-responsive juli" />
-			<img src="./png/spyder.ico" title="202*202 spyder.ico...." style="width: 50%;" class="img-responsive juli" />
+			<img src="./png/500x500-白色底.png" title="灰度 500x500-白色底.png...." style="width: 50%;"
+				class="img-responsive juli" />
+			<img src="./png/500x500-透明底.png" title="灰度 500x500-透明底.png...." style="width: 50%;"
+				class="img-responsive juli" />
+			<img src="./png/500x500-黑色底.png" title="灰度 500x500-黑色底.png...." style="width: 50%;"
+				class="img-responsive juli" />
+			<img src="./png/logo3.png" title="370*320 YES SIR!-透明背景.png...." style="width: 50%;"
+				class="img-responsive juli" />
+			<img src="./png/1000x1000-白色底.png" title="灰度 1000x1000-白色底.png...." style="width: 50%;"
+				class="img-responsive juli" />
+			<img src="./png/1000x1000-黑色底.png" title="灰度 1000x1000-黑色底.png...." style="width: 50%;"
+				class="img-responsive juli" />
+			<img src="./png/home.png" title="512*512 home.png...." style="width: 50%;" class="img-responsive juli" />
+			<img src="./png/1500x1500.png" title="灰度 1500x1500-透明背景.png...." style="width: 50%;"
+				class="img-responsive juli" />
+			<img src="./png/2000x2000.png" title="灰度 2000x2000-透明背景.png...." style="width: 50%;"
+				class="img-responsive juli" />
+			<img src="./png/2000x2000-白色底.png" title="灰度 2000x2000-白色底.png...." style="width: 50%;"
+				class="img-responsive juli" />
+			<img src="./png/2000x2000-黑色底.png" title="灰度 2000x2000-黑色底.png...." style="width: 50%;"
+				class="img-responsive juli" />
+			<img src="./png/welcome.png" title="500*490-welcome_拽-头像.png...." style="width: 50%;"
+				class="img-responsive juli" />
+			<img src="./png/blog.png" title="灰度 446*446-blog-透明背景.png...." style="width: 50%;"
+				class="img-responsive juli" />
+
+			<img src="./png/favicon.ico" title="灰度 446*446 favicon.ico...." style="width: 50%;"
+				class="img-responsive juli" />
+			<img src="./png/spyder.ico" title="202*202 spyder.ico...." style="width: 50%;"
+				class="img-responsive juli" />
 			<img src="./png/sir.ico" title="128*128 sir.ico...." style="width: 50%;" class="img-responsive juli" />
 			<img src="./png/hacker.jpg" title="640*640 sir.png...." style="width: 50%;" class="img-responsive juli" />
 			<img src="./png/avatar.png" title="371*390 Jerry.png...." style="width: 50%;" class="img-responsive juli" />
 			<img src="./png/music.png" title="512*512 music.png...." style="width: 50%;" class="img-responsive juli" />
+			<img src="./png/wuxing.png" title="650*650 wuxing.png...." style="width: 50%;" class="img-responsive juli" />
 
 
 		</center>
